# iitypes

./: README.md  requirements.txt  setup.cfg
src/iitypes/: classic.py  common.py  geospatial.py  standard.py  types.py
tests/: ANSIdate_test.py  Boolean_test.py  Byte_test.py  C_test.py  Char_test.py  Decimal_test.py  Float_test.py  IIAPI_LBLOC_TYPE_test.py  IPv4_test.py  IPv6_test.py  Ingresdate_test.py  Integer_test.py  Interval_DS_test.py  Interval_YM_test.py  Money_test.py  Nchar_test.py  Nvarchar_test.py  Object_Key_test.py  Table_Key_test.py  Text_test.py  Time_WLTZ_test.py  Time_WOTZ_test.py  Time_WTZ_test.py  Time_test.py  Timestamp_WLTZ_test.py  Timestamp_WOTZ_test.py  Timestamp_WTZ_test.py  Timestamp_test.py  UUID_test.py  Varbyte_test.py  Varchar_test.py  live_DB_test.py  live_IIAPI_LBLOC_TYPE_test.py  live_fire_test.py
