[metadata]
name = iitypes
author = Roy Hann
author_email = roy.hann@rationalcommerce.com
description = Actian Ingres/Vector data types package
version = 0.0.2
url = https://localhost/stub
license = MIT
keywords =
    Ingres
    Actian

[options]
install_requires =
    loguru >= 0.5.3
    pyngres >= 0.1.0
    multipledispatch >= 1.0.0
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
